# spotifier

./: LICENSE  README.md  pyproject.toml
sources/spotifier/: __init__.py
