[tool.poetry]
name = "spotifier"
version = "0.0.0"
description = "Just a wrapper for Spotify Web API."
authors = ["Yuly Gorbatkov <contact@amayakasa.xyz>"]
readme = "README.md"

packages = [
    { include = "spotifier", from = "sources" }
]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
